@@ -2,6 +2,7 @@ v7.5
 -----
 + Added player data from steamspy.com to app pages (thanks galyonkin!)
 + Added support for Coinbase.io and Funstock Digital to price comparisons
++ Added support for setting custom profile styles
 : Fixed an issue with price data not being in the correct denomination due to a change made by Valve
 : Fixed a bug that caused the achievement sorting function not to work correctly
 
